# Influx_DB_Test_HAL_Structure

./: .gitignore  README.md  sdkconfig.defaults
components/drivers/: CMakeLists.txt
components/drivers/adc/: adc_manager.c  adc_manager.h
components/drivers/csm_v2_driver/: csm_v2_driver.c  csm_v2_driver.h
components/drivers/epaper/: epaper_driver.c  epaper_driver.h
components/drivers/espnow/: CMakeLists.txt  README.md  espnow_driver.c  espnow_driver.h
components/drivers/http/: http_buffer.c  http_client.h
components/drivers/influxdb/: influxdb_client.c  influxdb_client.h
components/drivers/mqtt/: CMakeLists.txt  mqtt_driver.c  mqtt_driver.h
components/drivers/wifi/: wifi_manager.c
components/utils/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h  soil_project_main.c  soil_project_main.h
main/01_testing/: wifi_connection_main.c
main/application/: battery_monitor_task.c  battery_monitor_task.h  env_monitor_app.c  env_monitor_app.h  epaper_display_app.c  epaper_display_app.h  influx_sender.c  influx_sender.h  mqtt_sender.c  mqtt_sender.h  soil_monitor_app.c  soil_monitor_app.h
main/config/: credentials.h.template  esp32-config.h
main/drivers/influxdb/: influxdb_client.c  influxdb_client.h
main/drivers/sensors/: aht20.c  aht20.h
