idf_component_register(SRCS "wifi/wifi_manager.c"
                            "http/http_client.c"
                            "http/http_buffer.c"
                            "influxdb/influxdb_client.c"
                            "sensors/aht20.c"
                            "led/led.c"
                            "adc/adc.c"
                            "adc/adc_manager.c"
                            "csm_v2_driver/csm_v2_driver.c"
                            "epaper/epaper_driver.c"
                            "mqtt/mqtt_driver.c"
                       INCLUDE_DIRS "."
                                    "wifi"
                                    "http"
                                    "influxdb"
                                    "sensors"
                                    "led"
                                    "adc"
                                    "csm_v2_driver"
                                    "epaper"
                                    "mqtt"
                                    "${CMAKE_SOURCE_DIR}/main"
                       REQUIRES driver esp_wifi esp_netif esp_http_client esp-tls json esp_adc nvs_flash mqtt utils)
